kubernetes/data/pastebin/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: yabin
  labels:
    app: yabin
spec:
  selector:
    matchLabels:
      app: yabin
  template:
    metadata:
      labels:
        app: yabin
    spec:
      containers:
      - name: yabin
        image: ghcr.io/duckfullstop/yabinpp:latest
        resources:
          requests:
            memory: "50Mi"
            cpu: "50m"
          limits:
            memory: "200Mi"
            cpu: "500m"
        ports:
        - containerPort: 3000
          name: http
