kubernetes/data/pastebin/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: yabin
spec:
  ports:
  - name: http
    port: 80
    targetPort: http
  selector:
    app: yabin
